--- a/A_star/visualization/app/styles/main.css
+++ b/A_star/visualization/app/styles/main.css
@@ -1,83 +1,49 @@
-.browsehappy {
-  margin: 0.2em 0;
-  background: #ccc;
-  color: #000;
-  padding: 0.2em 0;
+.content-container{
+  padding-top: 50px;
 }
 
-body {
-  padding: 0;
+.input-td{
+  padding: 5px;
 }
 
-/* Everything but the jumbotron gets side spacing for mobile first views */
-.header,
-.marketing,
-.footer {
-  padding-left: 15px;
-  padding-right: 15px;
+.active-tool{
+  border: 5px solid black !important; 
 }
 
-/* Custom page header */
-.header {
-  border-bottom: 1px solid #e5e5e5;
-  margin-bottom: 10px;
-}
-/* Make the masthead heading the same height as the navigation */
-.header h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  line-height: 40px;
-  padding-bottom: 19px;
+.square{
+  border: 1px solid black;
+  height: 30px;
+  width: 30px;
+  display: inline-block;
 }
 
-/* Custom page footer */
-.footer {
-  padding-top: 19px;
-  color: #777;
-  border-top: 1px solid #e5e5e5;
+.div.valign{
+  line-height: 200px
 }
 
-.container-narrow > hr {
-  margin: 30px 0;
+.rectangle{
+  border: 1px solid black;
+  width: 100px;
+  display: inline-block;
 }
 
-/* Main marketing message and sign up button */
-.jumbotron {
-  text-align: center;
-  border-bottom: 1px solid #e5e5e5;
-}
-.jumbotron .btn {
-  font-size: 21px;
-  padding: 14px 24px;
+.path{
+  background-color: #00a1e2;
 }
 
-/* Supporting marketing content */
-.marketing {
-  margin: 40px 0;
-}
-.marketing p + h4 {
-  margin-top: 28px;
+.start{
+  background-color: green;
 }
 
-/* Responsive: Portrait tablets and up */
-@media screen and (min-width: 768px) {
-  .container {
-    max-width: 730px;
-  }
-
-  /* Remove the padding we set earlier */
-  .header,
-  .marketing,
-  .footer {
-    padding-left: 0;
-    padding-right: 0;
-  }
-  /* Space out the masthead */
-  .header {
-    margin-bottom: 30px;
-  }
-  /* Remove the bottom border on the jumbotron for visual effect */
-  .jumbotron {
-    border-bottom: 0;
-  }
+.end{
+  background-color: red;
 }
+
+.floor{
+  background-color: white;
+}
+
+.shelf{
+  background-color: #999999;
+}
+
