--- a/A_star/visualization/app/views/main.html
+++ b/A_star/visualization/app/views/main.html
@@ -15,10 +15,11 @@
   </table>
 
   <br>
-  
+
+  <button class="btn btn-success" ng-click="findPath()">Find path</button>
   <button class="btn btn-primary" ng-click="resetGrid()">Set grid size</button>
-  <button class="btn btn-primary" ng-click="findPath()">Find path</button>
-  <button class="btn btn-danger" ng-click="resetGrid()">Reset</button>
+  <button class="btn btn-warning" ng-click="resetPaths()">Reset Paths</button>
+  <button class="btn btn-danger" ng-click="resetGrid()">Reset All</button>
 
   <div class="content-container">
     <div 
